frontend/scss/organisms/_o-grid-listing.scss
/* ... */
/***

Variant: `o-listing--single-row` - limits to a single row

***/

.o-grid-listing--single-row {
  flex-wrap: nowrap;
}

@each $name, $point in $breakpoints {
  @include breakpoint('#{$name}') {
    .o-grid-listing--single-row[class*="scroll@#{$name}"] {
      @if ($name == 'xlarge') {
        left: 50%;
        width: 100vw;
        margin-right: 0;
        margin-left: -50vw;
        padding-left: calc((100vw - #{map-get($main-col-widths, xlarge)}) / 2);
      } @elseif ($name == 'xsmall') {
        margin-right: colspan(5, $name, 0, true);
        margin-left: colspan(5, $name, 0, true);
        padding-left: colspan(1, $name);
      } @else {
        margin-right: colspan(3, $name, 0, true);
        margin-left: colspan(3, $name, 0, true);
        padding-left: colspan(1, $name);
      }
      margin-bottom: -4px;
      padding-bottom: 4px;
      overflow-x: auto;
      overflow-y: hidden;
      cursor: ew-resize;
      -ms-overflow-style: none;
      overflow-y: -moz-scrollbars-none;
      -webkit-overflow-scrolling: touch;

      &::-webkit-scrollbar {
        -webkit-appearance: none;
        display: none;
      }
    }

    .o-grid-listing--single-row[class*="scroll@#{$name}"]::after {
      content: '';
      display: block;
      flex: 0 0 auto;
      @if ($name == 'xlarge') {
        width: calc((100vw - #{map-get($main-col-widths, xlarge)}) / 2);
      } @elseif ($name == 'xsmall') {
        width: colspan(6, $name);
      } @else {
        width: colspan(3, $name);
      }
      height: 1px;
    }

    .o-grid-listing--single-row[class*="scroll@#{$name}"] > * {
      width: 216px;
      margin-top: 0;
      @if ($name == 'xsmall') {
        margin-left: colspan(6, #{$name});
      } @else {
        margin-left: colspan(2, #{$name});
      }
      border-top: 0 none;

      @if ($name == 'xlarge') {
        &:first-child {
          margin-left: 0;
        }
      }
    }

    .o-grid-listing--gridlines-right.o-grid-listing--single-row[class*="scroll@#{$name}"] > *:not(:last-child)::after,
    .o-grid-listing--gridlines-cols.o-grid-listing--single-row[class*="scroll@#{$name}"] > *:not(:last-child)::after {
      display: block;
    }

    .o-grid-listing--gridlines-right.o-grid-listing--single-row[class*="scroll@#{$name}"] > *:last-child::after,
    .o-grid-listing--gridlines-cols.o-grid-listing--single-row[class*="scroll@#{$name}"] > *:last-child::after {
      content: '';
      display: none;
    }

  }
}

/***

Following a <hr> or <tag class="hr"></tag>

***/

hr + .o-grid-listing,
.hr + .o-grid-listing {
  @each $name, $point in $breakpoints {
    @include breakpoint('#{$name}') {
      margin-top: 0;
      //padding-top: #{map-get($grid-margin-tops, $name)}px;
      padding-top: colspan(map-get($grid-padding-tops, $name), #{$name});
    }
  }
}

@each $name, $point in $breakpoints {
  @include breakpoint('#{$name}') {
    hr + .o-grid-listing--gridlines-top[class*="col@#{$name}"],
    hr + .o-grid-listing--gridlines-rows[class*="col@#{$name}"],
    .hr + .o-grid-listing--gridlines-top[class*="col@#{$name}"],
    .hr + .o-grid-listing--gridlines-rows[class*="col@#{$name}"] {
      padding-top: 0;
    }
  }
}


/***

Variants: `.o-grid-listing--X-col\@XXXXX`

X cols at XXXXX breakpoint

***/

// adjust width of things, second row onwards wants margin-tops

@include breakpoint('xsmall') {
  .o-grid-listing--2-col\@xsmall > * {
    width: colspan(grid-cols-to-colspan(2, 58, 6), 'xsmall');
  }

  .o-grid-listing--3-col\@xsmall > * {
    width: colspan(grid-cols-to-colspan(3, 58, 6), 'xsmall');
  }

  .o-grid-listing--4-col\@xsmall > *,
  .o-grid-listing--scroll\@xsmall.o-grid-listing--4-col\@xsmall > * {
    width: colspan(grid-cols-to-colspan(4, 58, 6), 'xsmall');
  }

  .o-grid-listing--6-col\@xsmall > *,
  .o-grid-listing--scroll\@xsmall.o-grid-listing--6-col\@xsmall > * {
    width: colspan(grid-cols-to-colspan(6, 58, 6), 'xsmall');
  }

  .o-grid-listing--2-col\@xsmall:not(.o-grid-listing--single-row) > *:nth-child(2) ~ *,
  .o-grid-listing--3-col\@xsmall:not(.o-grid-listing--single-row) > *:nth-child(3) ~ *,
  .o-grid-listing--4-col\@xsmall:not(.o-grid-listing--single-row) > *:nth-child(4) ~ *,
  .o-grid-listing--6-col\@xsmall:not(.o-grid-listing--single-row) > *:nth-child(6) ~ * {
    //margin-top: #{map-get($grid-margin-tops, 'xsmall')}px;
    margin-top: colspan(map-get($grid-padding-tops, 'xsmall'), 'xsmall');
  }

  .o-grid-listing--single-row.o-grid-listing--hide-extra\@xsmall.o-grid-listing--2-col\@xsmall > *:nth-child(2) ~ *,
  .o-grid-listing--single-row.o-grid-listing--hide-extra\@xsmall.o-grid-listing--3-col\@xsmall > *:nth-child(3) ~ *,
  .o-grid-listing--single-row.o-grid-listing--hide-extra\@xsmall.o-grid-listing--4-col\@xsmall > *:nth-child(4) ~ *,
  .o-grid-listing--single-row.o-grid-listing--hide-extra\@xsmall.o-grid-listing--6-col\@xsmall > *:nth-child(6) ~ * {
    display: none;
  }
}
/* ... */

